My fourth commit

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">  
+    <link rel="stylesheet" href="css/style.css">
 </head>
     <body>
         <div class="wrapper">
         <div class="container">
             <div class="panel panel-default">
                 <div class="panel-body">
-        <form class="form-vertical">
+        <form class="form-vertical" method="post" action>
             <!-- Dynamic html form container -->
-            <div id="form_container"></div>
+            <div id="formContainer"></div>
         </form>
                 </div>
             </div>        
