My fifth commit

--- a/index.html
+++ b/index.html
@@ -1,27 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <!-- Bootstrap Link -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">  
-    <link rel="stylesheet" href="css/style.css">
-</head>
-    <body>
-        <div class="wrapper">
-        <div class="container">
-            <div class="panel panel-default">
-                <div class="panel-body">
-        <form class="form-vertical" method="post" action>
-            <!-- Dynamic html form container -->
-            <div id="formContainer"></div>
-        </form>
-                </div>
-            </div>        
-        </div>
-        </div>
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<!-- External Script Inclusion -->
-<script src="js/script.js"></script>
-    </body>
-</html>
+<!DOCTYPE html><link href=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css rel=stylesheet><link href=css/style.css rel=stylesheet><div class=wrapper><div class=container><div class="panel panel-default"><div class=panel-body><form action class=form-vertical method=post><div id=formContainer></div></form></div></div></div></div><script src=https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js></script><script src=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js></script><script src=js/script.js></script>
